bokeh chart added

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "<Response url='https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-processing-times.html' request=<Request url='https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-processing-times.html' method='GET'>>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "['Economic immigration\\n              ']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,9 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'time': '4 months', 'date_recorded': 'April 18, 2023'}\n",
+      "{'time': '5 months', 'date_recorded': 'April 18, 2023'}\n",
+      "{'time': '44 months', 'date_recorded': 'April 18, 2023'}\n",
+      "{'time': '67 months', 'date_recorded': 'April 18, 2023'}\n",
+      "{'time': '27 months', 'date_recorded': 'April 18, 2023'}\n",
+      "{'time': 'Not enough data', 'date_recorded': 'April 18, 2023'}\n",
+      "{'time': '20 months', 'date_recorded': 'April 18, 2023'}\n",
+      "{'time': '35 months', 'date_recorded': 'April 18, 2023'}\n"
+     ]
+    }
+   ],
    "source": [
     "for index in range(2,12):\n",
     "\n",
@@ -139,6 +154,8 @@
     "\n",
     "        type = type[0]\n",
     "\n",
+    "        type = type.replace(\" \", \"_\")\n",
+    "\n",
     "        await page.click(\"xpath=/html/body/main/div[1]/div[3]/div[4]/div[1]/div/form/button\")\n",
     "\n",
     "        await page.wait_for_timeout(3000)\n",
@@ -149,8 +166,10 @@
     "\n",
     "        time = doc.find_all('span', {'class': 'wb-init'})\n",
     "        \n",
-    "        data[\"time\"] = time[0].text\n",
-    "        data[\"date_recorded\"] = time[1].text\n",
+    "        data[\"time\"] =  time[0].text \n",
+    "        data[\"date_recorded\"] =  time[1].text \n",
+    "\n",
+    "        print(data)\n",
     "        \n",
     "        with open(f'./data/{type}.csv', 'a', newline='') as csvfile:\n",
     "            fieldnames = ['time', 'date_recorded']\n",
@@ -162,17 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"output.json\", \"w\") as f:\n",
-    "    json.dump(economic_visas, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc2"
   },
   "orig_nbformat": 4
  },
