--- a/clean.ipynb
+++ b/clean.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clean and plot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,42 +20,21 @@
     "from bokeh.plotting import figure, show\n",
     "from bokeh.embed import file_html\n",
     "from bokeh.resources import CDN\n",
+    "from bokeh.models import CustomJS, Dropdown\n",
     "import glob"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Atlantic_Immigration_Program.csv    Skilled_trades_(Federal).csv\n",
-      "Canadian_Experience_Class.csv       Skilled_workers_(Federal).csv\n",
-      "Quebec_Business_Class.csv           Skilled_workers_(Quebec).csv\n",
-      "Self-employed_persons_(Federal).csv Start-up_visa.csv\n"
-     ]
-    }
-   ],
    "source": [
-    "! ls ./data\n",
-    "\n"
+    "Reading the data and cleaning:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categories = [\"Atlantic_Immigration_Program.csv\", \"Canadian_Experience_Class.csv\", \"Quebec_Business_Class.csv\", \"Self-employed_persons_(Federal).csv\", \"Skilled_trades_(Federal).csv\", \"Skilled_workers_(Federal).csv\", \"Start-up_visa.csv\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,58 +59,361 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the data / csv files and making each one a dataframe:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   time date_recorded\n",
-      "0    48    2022-10-18\n",
-      "1    64    2022-11-18\n",
-      "2    64    2022-12-18\n",
-      "3    49    2023-01-18\n",
-      "4    84    2023-02-18\n",
-      "5    48    2023-03-18\n",
-      "6     4    2023-04-18\n",
-      "   time date_recorded\n",
-      "0     5    2022-10-18\n",
-      "1    10    2022-11-18\n",
-      "2     5    2022-12-18\n",
-      "3     8    2023-01-18\n",
-      "4     4    2023-02-18\n",
-      "5     5    2023-03-18\n",
-      "6     5    2023-04-18\n"
+      "   time date_recorded                  category\n",
+      "0    22    2022-10-18  Skilled workers (Quebec)\n",
+      "1    23    2022-11-18  Skilled workers (Quebec)\n",
+      "2    22    2022-12-18  Skilled workers (Quebec)\n",
+      "3    21    2023-01-18  Skilled workers (Quebec)\n",
+      "4    22    2023-02-18  Skilled workers (Quebec)\n",
+      "5    21    2023-03-18  Skilled workers (Quebec)\n",
+      "6    20    2023-04-18  Skilled workers (Quebec)\n",
+      "   time date_recorded               category\n",
+      "0    67    2022-10-18  Quebec Business Class\n",
+      "1    65    2022-11-18  Quebec Business Class\n",
+      "2    68    2022-12-18  Quebec Business Class\n",
+      "3    64    2023-01-18  Quebec Business Class\n",
+      "4    64    2023-02-18  Quebec Business Class\n",
+      "5    65    2023-03-18  Quebec Business Class\n",
+      "6    67    2023-04-18  Quebec Business Class\n",
+      "   time date_recorded                   category\n",
+      "0    22    2022-10-18  Skilled workers (Federal)\n",
+      "1    24    2022-11-18  Skilled workers (Federal)\n",
+      "2    25    2022-12-18  Skilled workers (Federal)\n",
+      "3    24    2023-01-18  Skilled workers (Federal)\n",
+      "4    23    2023-02-18  Skilled workers (Federal)\n",
+      "5    22    2023-03-18  Skilled workers (Federal)\n",
+      "6    27    2023-04-18  Skilled workers (Federal)\n",
+      "   time date_recorded                      category\n",
+      "0     8    2022-10-18  Atlantic Immigration Program\n",
+      "1     6    2022-11-18  Atlantic Immigration Program\n",
+      "2     6    2022-12-18  Atlantic Immigration Program\n",
+      "3     4    2023-01-18  Atlantic Immigration Program\n",
+      "4     4    2023-02-18  Atlantic Immigration Program\n",
+      "5     4    2023-03-18  Atlantic Immigration Program\n",
+      "6     4    2023-04-18  Atlantic Immigration Program\n",
+      "   time date_recorded                         category\n",
+      "0    48    2022-10-18  Self-employed persons (Federal)\n",
+      "1    60    2022-11-18  Self-employed persons (Federal)\n",
+      "2    64    2022-12-18  Self-employed persons (Federal)\n",
+      "3    85    2023-01-18  Self-employed persons (Federal)\n",
+      "4    24    2023-02-18  Self-employed persons (Federal)\n",
+      "5    58    2023-03-18  Self-employed persons (Federal)\n",
+      "6    44    2023-04-18  Self-employed persons (Federal)\n",
+      "   time date_recorded       category\n",
+      "0    30    2022-10-18  Start-up visa\n",
+      "1    41    2022-11-18  Start-up visa\n",
+      "2    42    2022-12-18  Start-up visa\n",
+      "3    44    2023-01-18  Start-up visa\n",
+      "4    45    2023-02-18  Start-up visa\n",
+      "5    34    2023-03-18  Start-up visa\n",
+      "6    35    2023-04-18  Start-up visa\n",
+      "   time date_recorded                  category\n",
+      "0    39    2022-10-18  Skilled trades (Federal)\n",
+      "1    38    2022-11-18  Skilled trades (Federal)\n",
+      "2    38    2022-12-18  Skilled trades (Federal)\n",
+      "3    39    2023-01-18  Skilled trades (Federal)\n",
+      "4    40    2023-02-18  Skilled trades (Federal)\n",
+      "5    48    2023-03-18  Skilled trades (Federal)\n",
+      "   time date_recorded                   category\n",
+      "0     4    2022-10-18  Canadian Experience Class\n",
+      "1     5    2022-11-18  Canadian Experience Class\n",
+      "2     5    2022-12-18  Canadian Experience Class\n",
+      "3     8    2023-01-18  Canadian Experience Class\n",
+      "4     4    2023-02-18  Canadian Experience Class\n",
+      "5     5    2023-03-18  Canadian Experience Class\n",
+      "6     5    2023-04-18  Canadian Experience Class\n"
      ]
     }
    ],
    "source": [
-    "df1 = pd.read_csv('./data/Atlantic_Immigration_Program.csv', parse_dates=['date_recorded'])\n",
-    "df2 = pd.read_csv('./data/Canadian_Experience_Class.csv', parse_dates=['date_recorded'])\n",
+    "csv_files = glob.glob('./data/*.csv')\n",
     "\n",
-    "print(df1)\n",
-    "print(df2)\n",
+    "dfs = []\n",
     "\n",
-    "p = figure(width=800, height=250, x_axis_type=\"datetime\")\n",
-    "p.title.text = 'Click on legend entries to mute the corresponding lines'\n",
+    "for file in csv_files:\n",
+    "    df = pd.read_csv(file, parse_dates=['date_recorded'])\n",
+    "    df[\"category\"] = file.split('/')[-1].split('.')[0]\n",
+    "    df[\"category\"] = df[\"category\"].str.replace('_', ' ')\n",
+    "    print(df)\n",
+    "    dfs.append(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each dataframe in dfs, change the name of the time column to the category name\n",
+    "for df in dfs:\n",
+    "    df.rename(columns={'time': df['category'][0]}, inplace=True)\n",
+    "    df.drop(['category'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfs[0][\"qc_skilled\"] = dfs[0][\"Skilled workers (Quebec)\"]\n",
+    "dfs[0][\"qc_business\"] = dfs[1][\"Quebec Business Class\"]\n",
+    "dfs[0][\"skilled_fed\"] = dfs[2][\"Skilled workers (Federal)\"]\n",
+    "dfs[0][\"atlantic\"] = dfs[3][\"Atlantic Immigration Program\"]\n",
+    "dfs[0][\"self_employed\"] = dfs[4][\"Self-employed persons (Federal)\"]\n",
+    "dfs[0][\"startup\"] = dfs[5][\"Start-up visa\"]\n",
+    "dfs[0][\"trades\"] = dfs[6][\"Skilled trades (Federal)\"]\n",
+    "dfs[0][\"can_exp\"] = dfs[7][\"Canadian Experience Class\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "big_frame = dfs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Skilled workers (Quebec)</th>\n",
+       "      <th>date_recorded</th>\n",
+       "      <th>qc_skilled</th>\n",
+       "      <th>qc_business</th>\n",
+       "      <th>skilled_fed</th>\n",
+       "      <th>atlantic</th>\n",
+       "      <th>self_employed</th>\n",
+       "      <th>startup</th>\n",
+       "      <th>trades</th>\n",
+       "      <th>can_exp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2022-10-18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>67</td>\n",
+       "      <td>22</td>\n",
+       "      <td>8</td>\n",
+       "      <td>48</td>\n",
+       "      <td>30</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23</td>\n",
+       "      <td>2022-11-18</td>\n",
+       "      <td>23</td>\n",
+       "      <td>65</td>\n",
+       "      <td>24</td>\n",
+       "      <td>6</td>\n",
+       "      <td>60</td>\n",
+       "      <td>41</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2022-12-18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>68</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>64</td>\n",
+       "      <td>42</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-01-18</td>\n",
+       "      <td>21</td>\n",
+       "      <td>64</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4</td>\n",
+       "      <td>85</td>\n",
+       "      <td>44</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2023-02-18</td>\n",
+       "      <td>22</td>\n",
+       "      <td>64</td>\n",
+       "      <td>23</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>45</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-03-18</td>\n",
+       "      <td>21</td>\n",
+       "      <td>65</td>\n",
+       "      <td>22</td>\n",
+       "      <td>4</td>\n",
+       "      <td>58</td>\n",
+       "      <td>34</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>20</td>\n",
+       "      <td>2023-04-18</td>\n",
+       "      <td>20</td>\n",
+       "      <td>67</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "      <td>44</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Skilled workers (Quebec) date_recorded  qc_skilled  qc_business  \\\n",
+       "0                        22    2022-10-18          22           67   \n",
+       "1                        23    2022-11-18          23           65   \n",
+       "2                        22    2022-12-18          22           68   \n",
+       "3                        21    2023-01-18          21           64   \n",
+       "4                        22    2023-02-18          22           64   \n",
+       "5                        21    2023-03-18          21           65   \n",
+       "6                        20    2023-04-18          20           67   \n",
+       "\n",
+       "   skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
+       "0           22         8             48       30    39.0        4  \n",
+       "1           24         6             60       41    38.0        5  \n",
+       "2           25         6             64       42    38.0        5  \n",
+       "3           24         4             85       44    39.0        8  \n",
+       "4           23         4             24       45    40.0        4  \n",
+       "5           22         4             58       34    48.0        5  \n",
+       "6           27         4             44       35     NaN        5  "
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop skill workers (quebec) column\n",
     "\n",
-    "for df, name, color in zip([df1, df2], [\"Atlantic\", \"Canadian Experience\"], Spectral4):\n",
-    "    p.line(df['date_recorded'], df['time'], line_width=2, color=color, alpha=0.8,\n",
-    "           muted_color=color, muted_alpha=0.2, legend_label=name)\n",
+    "big_frame.drop(['Skilled workers (Quebec)'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.models import ColumnDataSource, CustomJS, Range1d, Select\n",
+    "from bokeh.plotting import figure, output_notebook, show\n",
+    "from bokeh.layouts import column\n",
     "\n",
-    "p.legend.location = \"top_left\"\n",
-    "p.legend.click_policy=\"mute\"\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "html = file_html(p, CDN, \"my plot\")\n",
+    "# fix the y_range to be the same for two lines\n",
+    "p = figure(y_range=Range1d(0, 60), x_axis_type='datetime', width=600, height=400)\n",
     "\n",
-    "# save html\n",
-    "with open('plot.html', 'w') as f:\n",
-    "    f.write(html)\n",
+    "# shared datasource\n",
+    "source = ColumnDataSource(big_frame)\n",
     "\n",
+    "plot_1 = p.line(x=\"date_recorded\", y=\"qc_skilled\", color=\"teal\", source=source, line_width=2)\n",
+    "plot_2 = p.line(x=\"date_recorded\",  y=\"can_exp\", color=\"firebrick\", source=source, line_width=2)\n",
     "\n",
-    "show(p)"
+    "# initialise the plot with only y1 visible - to match the dropdown default\n",
+    "plot_2.visible = False\n",
+    "\n",
+    "# dropdown widget + Javascript code for interactivity\n",
+    "select = Select(title=\"Program:\", value=\"Line 1\", options=[\"Quebec Skilled Workers\", \"Canadian Experience Class\"])\n",
+    "callback = CustomJS(args=dict(line_1=plot_1, line_2=plot_2), code=\"\"\"\n",
+    "line_1.visible = true\n",
+    "line_2.visible = true\n",
+    "\n",
+    "if (this.value === \"Line 1\") {\n",
+    "    line_2.visible = false \n",
+    "} else {\n",
+    "    line_1.visible = false\n",
+    "}\n",
+    "\"\"\")\n",
+    "select.js_on_change(\"value\", callback)\n",
+    "\n",
+    "# save the JS code to a file\n",
+    "with open('plot4.js', 'w') as f:\n",
+    "    f.write(callback.code)\n",
+    "\n",
+    "layout = column(select, p)\n",
+    "\n",
+    "# save the HTML file\n",
+    "html = file_html(layout, CDN, \"my plot\")\n",
+    "with open('plot4.html', 'w') as f:\n",
+    "    f.write(html)\n"
    ]
   },
   {
@@ -131,7 +421,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bokeh.embed import file_html\n",
+    "from bokeh.resources import CDN\n",
+    "\n",
+    "# generate the HTML file\n",
+    "html = file_html(layout, CDN, \"my plot\")\n",
+    "\n",
+    "# save the HTML file to disk\n",
+    "with open(\"my_plot.html\", \"w\") as f:\n",
+    "    f.write(html)"
+   ]
   }
  ],
  "metadata": {
