adjusted plot + added text / links to page

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -5,12 +5,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clean and plot"
+    "## Cleaning + plotting (using Bokeh) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "6           27         4             44       35     NaN        5  "
       ]
      },
-     "execution_count": 210,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
     "plot_2.visible = False\n",
     "\n",
     "# dropdown widget + Javascript code for interactivity\n",
-    "select = Select(title=\"Program:\", value=\"Line 1\", options=[\"Quebec Skilled Workers\", \"Canadian Experience Class\"])\n",
+    "select = Select(title=\"Choose a program:\", value=\"Line 1\", options=[\"Quebec Skilled Workers\", \"Canadian Experience Class\"])\n",
     "callback = CustomJS(args=dict(line_1=plot_1, line_2=plot_2), code=\"\"\"\n",
     "line_1.visible = true\n",
     "line_2.visible = true\n",
@@ -405,32 +405,15 @@
     "select.js_on_change(\"value\", callback)\n",
     "\n",
     "# save the JS code to a file\n",
-    "with open('plot4.js', 'w') as f:\n",
+    "with open('plot.js', 'w') as f:\n",
     "    f.write(callback.code)\n",
     "\n",
     "layout = column(select, p)\n",
     "\n",
     "# save the HTML file\n",
     "html = file_html(layout, CDN, \"my plot\")\n",
-    "with open('plot4.html', 'w') as f:\n",
+    "with open('plot.html', 'w') as f:\n",
     "    f.write(html)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bokeh.embed import file_html\n",
-    "from bokeh.resources import CDN\n",
-    "\n",
-    "# generate the HTML file\n",
-    "html = file_html(layout, CDN, \"my plot\")\n",
-    "\n",
-    "# save the HTML file to disk\n",
-    "with open(\"my_plot.html\", \"w\") as f:\n",
-    "    f.write(html)"
    ]
   }
  ],
