--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "6           27         4             44       35     NaN        5  "
       ]
      },
-     "execution_count": 228,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "big_frame.to_csv('./data/all_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
