--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "This notebook scrapes the immigration times processing page - to get the processing time for applicants applying for PR under the Economic Migration class\n",
     "\n",
-    "(using Playwright)"
+    "(using Playwright and BeautifulSoup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "<Response url='https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-processing-times.html' request=<Request url='https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-processing-times.html' method='GET'>>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -115,21 +115,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'time': '4 months', 'date_recorded': 'April 18, 2023'}\n",
-      "{'time': '5 months', 'date_recorded': 'April 18, 2023'}\n",
-      "{'time': '44 months', 'date_recorded': 'April 18, 2023'}\n",
-      "{'time': '67 months', 'date_recorded': 'April 18, 2023'}\n",
-      "{'time': '27 months', 'date_recorded': 'April 18, 2023'}\n",
-      "{'time': 'Not enough data', 'date_recorded': 'April 18, 2023'}\n",
-      "{'time': '20 months', 'date_recorded': 'April 18, 2023'}\n",
-      "{'time': '35 months', 'date_recorded': 'April 18, 2023'}\n"
+      "{'time': '5 months', 'date_recorded': 'May 2, 2023'}\n",
+      "{'time': '4 months', 'date_recorded': 'May 2, 2023'}\n",
+      "{'time': '46 months', 'date_recorded': 'May 2, 2023'}\n",
+      "{'time': '68 months', 'date_recorded': 'May 2, 2023'}\n",
+      "{'time': '26 months', 'date_recorded': 'May 2, 2023'}\n",
+      "{'time': 'Not enough data', 'date_recorded': 'May 2, 2023'}\n",
+      "{'time': '21 months', 'date_recorded': 'May 2, 2023'}\n",
+      "{'time': '36 months', 'date_recorded': 'May 2, 2023'}\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
