--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,34 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 356,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Can only use .str accessor with string values!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/kellywaldron/Desktop/Studio/project05/clean.ipynb Cell 4\u001b[0m in \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kellywaldron/Desktop/Studio/project05/clean.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m csv_files:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kellywaldron/Desktop/Studio/project05/clean.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(file)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kellywaldron/Desktop/Studio/project05/clean.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     df[\u001b[39m'\u001b[39m\u001b[39mtime\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39;49m\u001b[39mtime\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mstr\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39mNot enough data\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m0\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kellywaldron/Desktop/Studio/project05/clean.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kellywaldron/Desktop/Studio/project05/clean.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         df[\u001b[39m'\u001b[39m\u001b[39mdate_recorded\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39m\u001b[39mdate_recorded\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mstr\u001b[39m.\u001b[39mreplace(\u001b[39m'\u001b[39m\u001b[39m,\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0rc2/lib/python3.11/site-packages/pandas/core/generic.py:5902\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5895\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   5896\u001b[0m     name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_internal_names_set\n\u001b[1;32m   5897\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_metadata\n\u001b[1;32m   5898\u001b[0m     \u001b[39mand\u001b[39;00m name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessors\n\u001b[1;32m   5899\u001b[0m     \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_info_axis\u001b[39m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[1;32m   5900\u001b[0m ):\n\u001b[1;32m   5901\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m[name]\n\u001b[0;32m-> 5902\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mobject\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m__getattribute__\u001b[39;49m(\u001b[39mself\u001b[39;49m, name)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0rc2/lib/python3.11/site-packages/pandas/core/accessor.py:182\u001b[0m, in \u001b[0;36mCachedAccessor.__get__\u001b[0;34m(self, obj, cls)\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    180\u001b[0m     \u001b[39m# we're accessing the attribute of the class, i.e., Dataset.geo\u001b[39;00m\n\u001b[1;32m    181\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_accessor\n\u001b[0;32m--> 182\u001b[0m accessor_obj \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_accessor(obj)\n\u001b[1;32m    183\u001b[0m \u001b[39m# Replace the property with the accessor object. Inspired by:\u001b[39;00m\n\u001b[1;32m    184\u001b[0m \u001b[39m# https://www.pydanny.com/cached-property.html\u001b[39;00m\n\u001b[1;32m    185\u001b[0m \u001b[39m# We need to use object.__setattr__ because we overwrite __setattr__ on\u001b[39;00m\n\u001b[1;32m    186\u001b[0m \u001b[39m# NDFrame\u001b[39;00m\n\u001b[1;32m    187\u001b[0m \u001b[39mobject\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__setattr__\u001b[39m(obj, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name, accessor_obj)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0rc2/lib/python3.11/site-packages/pandas/core/strings/accessor.py:181\u001b[0m, in \u001b[0;36mStringMethods.__init__\u001b[0;34m(self, data)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, data) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    179\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mpandas\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcore\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39marrays\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstring_\u001b[39;00m \u001b[39mimport\u001b[39;00m StringDtype\n\u001b[0;32m--> 181\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_inferred_dtype \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate(data)\n\u001b[1;32m    182\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_categorical \u001b[39m=\u001b[39m is_categorical_dtype(data\u001b[39m.\u001b[39mdtype)\n\u001b[1;32m    183\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_string \u001b[39m=\u001b[39m \u001b[39misinstance\u001b[39m(data\u001b[39m.\u001b[39mdtype, StringDtype)\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.11.0rc2/lib/python3.11/site-packages/pandas/core/strings/accessor.py:235\u001b[0m, in \u001b[0;36mStringMethods._validate\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    232\u001b[0m inferred_dtype \u001b[39m=\u001b[39m lib\u001b[39m.\u001b[39minfer_dtype(values, skipna\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    234\u001b[0m \u001b[39mif\u001b[39;00m inferred_dtype \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m allowed_types:\n\u001b[0;32m--> 235\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCan only use .str accessor with string values!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    236\u001b[0m \u001b[39mreturn\u001b[39;00m inferred_dtype\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Can only use .str accessor with string values!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_files = glob.glob('./data/*.csv')\n",
     "\n",
     "for file in csv_files:\n",
     "    df = pd.read_csv(file)\n",
-    "\n",
-    "    df = df[df['time'] != 'Not enough data']\n",
     "    \n",
     "    try:\n",
+    "        df = df[df[\"time\"] != 'Not enough data']\n",
     "        df['date_recorded'] = df['date_recorded'].str.replace(',', '')\n",
     "        df['time'] = df['time'].str.replace('months', '')\n",
     "        df['time'] = df['time'].astype(int)\n",
@@ -84,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +82,7 @@
       "4    22    2023-02-18  Skilled workers (Quebec)\n",
       "5    21    2023-03-18  Skilled workers (Quebec)\n",
       "6    20    2023-04-18  Skilled workers (Quebec)\n",
+      "7    21    2023-05-02  Skilled workers (Quebec)\n",
       "   time date_recorded               category\n",
       "0    67    2022-10-18  Quebec Business Class\n",
       "1    65    2022-11-18  Quebec Business Class\n",
@@ -107,6 +91,7 @@
       "4    64    2023-02-18  Quebec Business Class\n",
       "5    65    2023-03-18  Quebec Business Class\n",
       "6    67    2023-04-18  Quebec Business Class\n",
+      "7    68    2023-05-02  Quebec Business Class\n",
       "   time date_recorded                   category\n",
       "0    22    2022-10-18  Skilled workers (Federal)\n",
       "1    24    2022-11-18  Skilled workers (Federal)\n",
@@ -115,6 +100,7 @@
       "4    23    2023-02-18  Skilled workers (Federal)\n",
       "5    22    2023-03-18  Skilled workers (Federal)\n",
       "6    27    2023-04-18  Skilled workers (Federal)\n",
+      "7    26    2023-05-02  Skilled workers (Federal)\n",
       "   time date_recorded                      category\n",
       "0     8    2022-10-18  Atlantic Immigration Program\n",
       "1     6    2022-11-18  Atlantic Immigration Program\n",
@@ -123,6 +109,7 @@
       "4     4    2023-02-18  Atlantic Immigration Program\n",
       "5     4    2023-03-18  Atlantic Immigration Program\n",
       "6     4    2023-04-18  Atlantic Immigration Program\n",
+      "7     5    2023-05-02  Atlantic Immigration Program\n",
       "   time date_recorded                         category\n",
       "0    48    2022-10-18  Self-employed persons (Federal)\n",
       "1    60    2022-11-18  Self-employed persons (Federal)\n",
@@ -131,6 +118,7 @@
       "4    24    2023-02-18  Self-employed persons (Federal)\n",
       "5    58    2023-03-18  Self-employed persons (Federal)\n",
       "6    44    2023-04-18  Self-employed persons (Federal)\n",
+      "7    46    2023-05-02  Self-employed persons (Federal)\n",
       "   time date_recorded       category\n",
       "0    30    2022-10-18  Start-up visa\n",
       "1    41    2022-11-18  Start-up visa\n",
@@ -139,6 +127,7 @@
       "4    45    2023-02-18  Start-up visa\n",
       "5    34    2023-03-18  Start-up visa\n",
       "6    35    2023-04-18  Start-up visa\n",
+      "7    36    2023-05-02  Start-up visa\n",
       "   time date_recorded                  category\n",
       "0    39    2022-10-18  Skilled trades (Federal)\n",
       "1    38    2022-11-18  Skilled trades (Federal)\n",
@@ -153,7 +142,8 @@
       "3     8    2023-01-18  Canadian Experience Class\n",
       "4     4    2023-02-18  Canadian Experience Class\n",
       "5     5    2023-03-18  Canadian Experience Class\n",
-      "6     5    2023-04-18  Canadian Experience Class\n"
+      "6     5    2023-04-18  Canadian Experience Class\n",
+      "7     4    2023-05-02  Canadian Experience Class\n"
      ]
     }
    ],
@@ -172,11 +162,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for each dataframe in dfs, change the name of the time column to the category name\n",
     "for df in dfs:\n",
     "    df.rename(columns={'time': df['category'][0]}, inplace=True)\n",
     "    df.drop(['category'], axis=1, inplace=True)"
@@ -184,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -337,6 +326,19 @@
        "      <td>NaN</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-02</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -350,6 +352,7 @@
        "4                        22    2023-02-18          22           64   \n",
        "5                        21    2023-03-18          21           65   \n",
        "6                        20    2023-04-18          20           67   \n",
+       "7                        21    2023-05-02          21           68   \n",
        "\n",
        "   skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
        "0           22         8             48       30    39.0        4  \n",
@@ -358,10 +361,11 @@
        "3           24         4             85       44    39.0        8  \n",
        "4           23         4             24       45    40.0        4  \n",
        "5           22         4             58       34    48.0        5  \n",
-       "6           27         4             44       35     NaN        5  "
+       "6           27         4             44       35     NaN        5  \n",
+       "7           26         5             46       36     NaN        4  "
       ]
      },
-     "execution_count": 247,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,16 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_frame.to_csv('./data/econ_migration_processing_times.csv', index=False)"
+    "big_frame.to_csv('./data/all_data/econ_migration_processing_times.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,8 +395,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting using Bokeh"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
