trying to get the dropdown to work

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "7           26         5             46       36     NaN        4  "
       ]
      },
-     "execution_count": 361,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,22 +416,36 @@
     "import numpy as np\n",
     "\n",
     "# fix the y_range to be the same for two lines\n",
-    "p = figure(y_range=Range1d(0, 60), x_axis_type='datetime', width=600, height=400)\n",
+    "p = figure(y_range=Range1d(0, 100), x_axis_type='datetime', width=600, height=400)\n",
     "\n",
     "# shared datasource\n",
     "source = ColumnDataSource(big_frame)\n",
     "\n",
-    "plot_1 = p.line(x=\"date_recorded\", y=\"qc_skilled\", color=\"teal\", source=source, line_width=2)\n",
-    "plot_2 = p.line(x=\"date_recorded\",  y=\"can_exp\", color=\"firebrick\", source=source, line_width=2)\n",
+    "plot_1 = p.line(x=\"date_recorded\", y=\"qc_skilled\", color=\"orangered\", source=source, line_width=2)\n",
+    "plot_2 = p.line(x=\"date_recorded\",  y=\"can_exp\", color=\"tomato\", source=source, line_width=2)\n",
+    "plot_3 = p.line(x=\"date_recorded\",  y=\"qc_business\", color=\"coral\", source=source, line_width=2)\n",
+    "plot_4 = p.line(x=\"date_recorded\",  y=\"skilled_fed\", color=\"darkorange\", source=source, line_width=2)\n",
+    "plot_5 = p.line(x=\"date_recorded\",  y=\"startup\", color=\"orange\", source=source, line_width=2)\n",
+    "plot_6 = p.line(x=\"date_recorded\",  y=\"trades\", color=\"firebrick\", source=source, line_width=2)\n",
+    "plot_7 = p.line(x=\"date_recorded\",  y=\"atlantic\", color=\"crimson\", source=source, line_width=2)\n",
+    "plot_8 = p.line(x=\"date_recorded\",  y=\"self_employed\", color=\"darkred\", source=source, line_width=2)\n",
+    "\n",
     "\n",
     "# initialise the plot with only y1 visible - to match the dropdown default\n",
     "plot_2.visible = False\n",
     "\n",
     "# dropdown widget + Javascript code for interactivity\n",
-    "select = Select(title=\"Choose a program:\", value=\"Line 1\", options=[\"Quebec Skilled Workers\", \"Canadian Experience Class\"])\n",
-    "callback = CustomJS(args=dict(line_1=plot_1, line_2=plot_2), code=\"\"\"\n",
+    "select = Select(title=\"Choose a program:\", value=\"Line 1\", options=[\"Quebec Skilled Workers\", \"Canadian Experience Class\", \"Quebec Business Class\", \"Start-up Visa\", \"Skilled Trades (Federal)\", \"Atlantic Immigration Program\", \"Self-employed persons (Federal)\"])\n",
+    "callback = CustomJS(args=dict(line_1=plot_1, line_2=plot_2, line_3=plot_3, line_4=plot_4, line_5=plot_5, line_6=plot_6, line_7=plot_7, line_8=plot_8), code=\"\"\"\n",
+    "\n",
     "line_1.visible = true\n",
     "line_2.visible = true\n",
+    "line_3.visible = true\n",
+    "line_4.visible = true\n",
+    "line_5.visible = true\n",
+    "line_6.visible = true\n",
+    "line_7.visible = true\n",
+    "line_8.visible = true\n",
     "\n",
     "if (this.value === \"Line 1\") {\n",
     "    line_2.visible = false \n",
@@ -439,6 +453,8 @@
     "    line_1.visible = false\n",
     "}\n",
     "\"\"\")\n",
+    "                    \n",
+    "                \n",
     "select.js_on_change(\"value\", callback)\n",
     "\n",
     "# save the JS code to a file\n",
@@ -452,6 +468,13 @@
     "with open('plot.html', 'w') as f:\n",
     "    f.write(html)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
