--- a/clean.ipynb
+++ b/clean.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,9 @@
     "import numpy as np\n",
     "\n",
     "# fix the y_range to be the same for two lines\n",
-    "p = figure(y_range=Range1d(0, 100), x_axis_type='datetime', width=600, height=400)\n",
+    "p = figure(y_range=Range1d(0, 100), x_axis_type='datetime', width=600, height=400,x_axis_label=\"Date\",\n",
+    "           y_axis_label=\"Processing Time (months)\")\n",
+    "\n",
     "\n",
     "# shared datasource\n",
     "source = ColumnDataSource(big_frame)\n",
@@ -468,13 +470,6 @@
     "with open('plot.html', 'w') as f:\n",
     "    f.write(html)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
