set headless to True

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser = await playwright.chromium.launch(headless = False)"
+    "browser = await playwright.chromium.launch(headless = True)"
    ]
   },
   {
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
