added pip install bokeh

--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,7 @@
       "9     21    2023-05-10  Skilled workers (Quebec)\n",
       "10    21    2023-05-16  Skilled workers (Quebec)\n",
       "11    21    2023-05-16  Skilled workers (Quebec)\n",
+      "12    21    2023-05-16  Skilled workers (Quebec)\n",
       "    time date_recorded               category\n",
       "0     67    2022-10-18  Quebec Business Class\n",
       "1     65    2022-11-18  Quebec Business Class\n",
@@ -100,6 +101,7 @@
       "9     68    2023-05-10  Quebec Business Class\n",
       "10    68    2023-05-16  Quebec Business Class\n",
       "11    68    2023-05-16  Quebec Business Class\n",
+      "12    68    2023-05-16  Quebec Business Class\n",
       "    time date_recorded                   category\n",
       "0     22    2022-10-18  Skilled workers (Federal)\n",
       "1     24    2022-11-18  Skilled workers (Federal)\n",
@@ -113,6 +115,7 @@
       "9     26    2023-05-10  Skilled workers (Federal)\n",
       "10    26    2023-05-16  Skilled workers (Federal)\n",
       "11    26    2023-05-16  Skilled workers (Federal)\n",
+      "12    26    2023-05-16  Skilled workers (Federal)\n",
       "    time date_recorded                      category\n",
       "0      8    2022-10-18  Atlantic Immigration Program\n",
       "1      6    2022-11-18  Atlantic Immigration Program\n",
@@ -126,6 +129,7 @@
       "9      5    2023-05-10  Atlantic Immigration Program\n",
       "10     5    2023-05-16  Atlantic Immigration Program\n",
       "11     5    2023-05-16  Atlantic Immigration Program\n",
+      "12     5    2023-05-16  Atlantic Immigration Program\n",
       "    time date_recorded                         category\n",
       "0     48    2022-10-18  Self-employed persons (Federal)\n",
       "1     60    2022-11-18  Self-employed persons (Federal)\n",
@@ -139,6 +143,7 @@
       "9     46    2023-05-10  Self-employed persons (Federal)\n",
       "10    46    2023-05-16  Self-employed persons (Federal)\n",
       "11    46    2023-05-16  Self-employed persons (Federal)\n",
+      "12    46    2023-05-16  Self-employed persons (Federal)\n",
       "    time date_recorded       category\n",
       "0     30    2022-10-18  Start-up visa\n",
       "1     41    2022-11-18  Start-up visa\n",
@@ -152,6 +157,7 @@
       "9     35    2023-05-10  Start-up visa\n",
       "10    35    2023-05-16  Start-up visa\n",
       "11    35    2023-05-16  Start-up visa\n",
+      "12    35    2023-05-16  Start-up visa\n",
       "   time date_recorded                  category\n",
       "0    39    2022-10-18  Skilled trades (Federal)\n",
       "1    38    2022-11-18  Skilled trades (Federal)\n",
@@ -171,7 +177,8 @@
       "8      4    2023-05-02  Canadian Experience Class\n",
       "9      4    2023-05-10  Canadian Experience Class\n",
       "10     4    2023-05-16  Canadian Experience Class\n",
-      "11     4    2023-05-16  Canadian Experience Class\n"
+      "11     4    2023-05-16  Canadian Experience Class\n",
+      "12     4    2023-05-16  Canadian Experience Class\n"
      ]
     }
    ],
@@ -190,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -419,6 +426,19 @@
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-16</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -437,6 +457,7 @@
        "9                         21    2023-05-10          21           68   \n",
        "10                        21    2023-05-16          21           68   \n",
        "11                        21    2023-05-16          21           68   \n",
+       "12                        21    2023-05-16          21           68   \n",
        "\n",
        "    skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
        "0            22         8             48       30    39.0        4  \n",
@@ -450,10 +471,11 @@
        "8            26         5             46       36     NaN        4  \n",
        "9            26         5             46       35     NaN        4  \n",
        "10           26         5             46       35     NaN        4  \n",
-       "11           26         5             46       35     NaN        4  "
+       "11           26         5             46       35     NaN        4  \n",
+       "12           26         5             46       35     NaN        4  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
