--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -88,6 +88,7 @@
       "10    21    2023-05-16  Skilled workers (Quebec)\n",
       "11    21    2023-05-16  Skilled workers (Quebec)\n",
       "12    21    2023-05-16  Skilled workers (Quebec)\n",
+      "13    21    2023-05-16  Skilled workers (Quebec)\n",
       "    time date_recorded               category\n",
       "0     67    2022-10-18  Quebec Business Class\n",
       "1     65    2022-11-18  Quebec Business Class\n",
@@ -102,6 +103,7 @@
       "10    68    2023-05-16  Quebec Business Class\n",
       "11    68    2023-05-16  Quebec Business Class\n",
       "12    68    2023-05-16  Quebec Business Class\n",
+      "13    68    2023-05-16  Quebec Business Class\n",
       "    time date_recorded                   category\n",
       "0     22    2022-10-18  Skilled workers (Federal)\n",
       "1     24    2022-11-18  Skilled workers (Federal)\n",
@@ -116,6 +118,7 @@
       "10    26    2023-05-16  Skilled workers (Federal)\n",
       "11    26    2023-05-16  Skilled workers (Federal)\n",
       "12    26    2023-05-16  Skilled workers (Federal)\n",
+      "13    26    2023-05-16  Skilled workers (Federal)\n",
       "    time date_recorded                      category\n",
       "0      8    2022-10-18  Atlantic Immigration Program\n",
       "1      6    2022-11-18  Atlantic Immigration Program\n",
@@ -130,6 +133,7 @@
       "10     5    2023-05-16  Atlantic Immigration Program\n",
       "11     5    2023-05-16  Atlantic Immigration Program\n",
       "12     5    2023-05-16  Atlantic Immigration Program\n",
+      "13     5    2023-05-16  Atlantic Immigration Program\n",
       "    time date_recorded                         category\n",
       "0     48    2022-10-18  Self-employed persons (Federal)\n",
       "1     60    2022-11-18  Self-employed persons (Federal)\n",
@@ -144,6 +148,7 @@
       "10    46    2023-05-16  Self-employed persons (Federal)\n",
       "11    46    2023-05-16  Self-employed persons (Federal)\n",
       "12    46    2023-05-16  Self-employed persons (Federal)\n",
+      "13    46    2023-05-16  Self-employed persons (Federal)\n",
       "    time date_recorded       category\n",
       "0     30    2022-10-18  Start-up visa\n",
       "1     41    2022-11-18  Start-up visa\n",
@@ -158,6 +163,7 @@
       "10    35    2023-05-16  Start-up visa\n",
       "11    35    2023-05-16  Start-up visa\n",
       "12    35    2023-05-16  Start-up visa\n",
+      "13    35    2023-05-16  Start-up visa\n",
       "   time date_recorded                  category\n",
       "0    39    2022-10-18  Skilled trades (Federal)\n",
       "1    38    2022-11-18  Skilled trades (Federal)\n",
@@ -178,7 +184,8 @@
       "9      4    2023-05-10  Canadian Experience Class\n",
       "10     4    2023-05-16  Canadian Experience Class\n",
       "11     4    2023-05-16  Canadian Experience Class\n",
-      "12     4    2023-05-16  Canadian Experience Class\n"
+      "12     4    2023-05-16  Canadian Experience Class\n",
+      "13     4    2023-05-16  Canadian Experience Class\n"
      ]
     }
    ],
@@ -197,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,23 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs[0][\"qc_skilled\"] = dfs[0][\"Skilled workers (Quebec)\"]\n",
-    "dfs[0][\"qc_business\"] = dfs[1][\"Quebec Business Class\"]\n",
-    "dfs[0][\"skilled_fed\"] = dfs[2][\"Skilled workers (Federal)\"]\n",
-    "dfs[0][\"atlantic\"] = dfs[3][\"Atlantic Immigration Program\"]\n",
-    "dfs[0][\"self_employed\"] = dfs[4][\"Self-employed persons (Federal)\"]\n",
-    "dfs[0][\"startup\"] = dfs[5][\"Start-up visa\"]\n",
-    "dfs[0][\"trades\"] = dfs[6][\"Skilled trades (Federal)\"]\n",
-    "dfs[0][\"can_exp\"] = dfs[7][\"Canadian Experience Class\"]"
+    "try: \n",
+    "\n",
+    "    dfs[0][\"qc_skilled\"] = dfs[0][\"Skilled workers (Quebec)\"]\n",
+    "    dfs[0][\"qc_business\"] = dfs[1][\"Quebec Business Class\"]\n",
+    "    dfs[0][\"skilled_fed\"] = dfs[2][\"Skilled workers (Federal)\"]\n",
+    "    dfs[0][\"atlantic\"] = dfs[3][\"Atlantic Immigration Program\"]\n",
+    "    dfs[0][\"self_employed\"] = dfs[4][\"Self-employed persons (Federal)\"]\n",
+    "    dfs[0][\"startup\"] = dfs[5][\"Start-up visa\"]\n",
+    "    dfs[0][\"trades\"] = dfs[6][\"Skilled trades (Federal)\"]\n",
+    "    dfs[0][\"can_exp\"] = dfs[7][\"Canadian Experience Class\"]\n",
+    "\n",
+    "except: \n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -439,6 +451,19 @@
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-16</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>46</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -458,6 +483,7 @@
        "10                        21    2023-05-16          21           68   \n",
        "11                        21    2023-05-16          21           68   \n",
        "12                        21    2023-05-16          21           68   \n",
+       "13                        21    2023-05-16          21           68   \n",
        "\n",
        "    skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
        "0            22         8             48       30    39.0        4  \n",
@@ -472,10 +498,11 @@
        "9            26         5             46       35     NaN        4  \n",
        "10           26         5             46       35     NaN        4  \n",
        "11           26         5             46       35     NaN        4  \n",
-       "12           26         5             46       35     NaN        4  "
+       "12           26         5             46       35     NaN        4  \n",
+       "13           26         5             46       35     NaN        4  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
