--- a/clean.ipynb
+++ b/clean.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,7 @@
       "11    21    2023-05-16  Skilled workers (Quebec)\n",
       "12    21    2023-05-16  Skilled workers (Quebec)\n",
       "13    21    2023-05-16  Skilled workers (Quebec)\n",
+      "14    21    2023-05-26  Skilled workers (Quebec)\n",
       "    time date_recorded               category\n",
       "0     67    2022-10-18  Quebec Business Class\n",
       "1     65    2022-11-18  Quebec Business Class\n",
@@ -104,6 +105,7 @@
       "11    68    2023-05-16  Quebec Business Class\n",
       "12    68    2023-05-16  Quebec Business Class\n",
       "13    68    2023-05-16  Quebec Business Class\n",
+      "14    68    2023-05-26  Quebec Business Class\n",
       "    time date_recorded                   category\n",
       "0     22    2022-10-18  Skilled workers (Federal)\n",
       "1     24    2022-11-18  Skilled workers (Federal)\n",
@@ -119,6 +121,7 @@
       "11    26    2023-05-16  Skilled workers (Federal)\n",
       "12    26    2023-05-16  Skilled workers (Federal)\n",
       "13    26    2023-05-16  Skilled workers (Federal)\n",
+      "14    26    2023-05-26  Skilled workers (Federal)\n",
       "    time date_recorded                      category\n",
       "0      8    2022-10-18  Atlantic Immigration Program\n",
       "1      6    2022-11-18  Atlantic Immigration Program\n",
@@ -134,6 +137,7 @@
       "11     5    2023-05-16  Atlantic Immigration Program\n",
       "12     5    2023-05-16  Atlantic Immigration Program\n",
       "13     5    2023-05-16  Atlantic Immigration Program\n",
+      "14     5    2023-05-26  Atlantic Immigration Program\n",
       "    time date_recorded                         category\n",
       "0     48    2022-10-18  Self-employed persons (Federal)\n",
       "1     60    2022-11-18  Self-employed persons (Federal)\n",
@@ -149,6 +153,7 @@
       "11    46    2023-05-16  Self-employed persons (Federal)\n",
       "12    46    2023-05-16  Self-employed persons (Federal)\n",
       "13    46    2023-05-16  Self-employed persons (Federal)\n",
+      "14    45    2023-05-26  Self-employed persons (Federal)\n",
       "    time date_recorded       category\n",
       "0     30    2022-10-18  Start-up visa\n",
       "1     41    2022-11-18  Start-up visa\n",
@@ -164,6 +169,7 @@
       "11    35    2023-05-16  Start-up visa\n",
       "12    35    2023-05-16  Start-up visa\n",
       "13    35    2023-05-16  Start-up visa\n",
+      "14    35    2023-05-26  Start-up visa\n",
       "   time date_recorded                  category\n",
       "0    39    2022-10-18  Skilled trades (Federal)\n",
       "1    38    2022-11-18  Skilled trades (Federal)\n",
@@ -185,7 +191,8 @@
       "10     4    2023-05-16  Canadian Experience Class\n",
       "11     4    2023-05-16  Canadian Experience Class\n",
       "12     4    2023-05-16  Canadian Experience Class\n",
-      "13     4    2023-05-16  Canadian Experience Class\n"
+      "13     4    2023-05-16  Canadian Experience Class\n",
+      "14     4    2023-05-26  Canadian Experience Class\n"
      ]
     }
    ],
@@ -204,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -464,6 +471,19 @@
        "      <td>NaN</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>21</td>\n",
+       "      <td>2023-05-26</td>\n",
+       "      <td>21</td>\n",
+       "      <td>68</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -484,6 +504,7 @@
        "11                        21    2023-05-16          21           68   \n",
        "12                        21    2023-05-16          21           68   \n",
        "13                        21    2023-05-16          21           68   \n",
+       "14                        21    2023-05-26          21           68   \n",
        "\n",
        "    skilled_fed  atlantic  self_employed  startup  trades  can_exp  \n",
        "0            22         8             48       30    39.0        4  \n",
@@ -499,10 +520,11 @@
        "10           26         5             46       35     NaN        4  \n",
        "11           26         5             46       35     NaN        4  \n",
        "12           26         5             46       35     NaN        4  \n",
-       "13           26         5             46       35     NaN        4  "
+       "13           26         5             46       35     NaN        4  \n",
+       "14           26         5             45       35     NaN        4  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc2"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
